[project]
name = "fastapi-livros"
version = "0.1.0"
description = "API de livros"
authors = [
    {name = "Usuário"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
